--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "watch": "bsb -make-world -w",
     "dev": "concurrently \"npm run watch\" \"npm run webpack\" "
   },
-  "keywords": ["BuckleScript"],
+  "keywords": [
+    "BuckleScript"
+  ],
   "license": "MIT",
   "dependencies": {
+    "bs-director": "0.0.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "reason-react": ">=0.2.1"
+    "reason-react": "^0.3.0"
   },
   "devDependencies": {
-    "bs-platform": "1.9.1",
-    "concurrently": "3.5.0",
-    "webpack": "^3.5.6"
+    "bs-platform": "^2.1.0",
+    "concurrently": "^3.5.0",
+    "webpack": "^1.14.0"
   }
 }
