--- a/bsconfig.json
+++ b/bsconfig.json
@@ -8,5 +8,7 @@
     "module": "commonjs",
     "in-source": true
   },
-  "bs-dependencies": ["reason-react"]
+  "bs-dependencies": ["reason-react"],
+  "bsc-flags": ["-bs-super-errors"],
+  "ppx-flags": ["./node_modules/ppx_bsx/bin/ppx_bsx.exe"]
 }
