--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "bs-platform": "^2.1.0",
     "concurrently": "^3.5.0",
+    "ppx_bsx": "^1.0.3",
     "webpack": "^1.14.0"
   }
 }
