--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ocamlnode",
   "version": "0.1.0",
+  "main": "src/main.js",
   "scripts": {
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
@@ -15,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "bs-director": "0.0.5",
+    "electron": "^1.7.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "reason-react": "^0.3.0"
